[tool.poetry]
name = "psst"
version = "0.0.1"
description = "Port super scanner tool."
authors = ["Kleo Hasani"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
